Style bug fix + refactor: move highlighted points behind menus. Also try to be clearer about z groups.

--- a/less/graph.less
+++ b/less/graph.less
@@ -21,22 +21,31 @@
 // z-index order
 //////////////////////////////////////////////////////////////////////////////
 
-@meter-z:                       4000;
-@marquee-z:                     4500;
-@menu-z:                        4600;
-@menus-z:                       4700;
-@highlighted-point-z:           5001;
-@graph-label-z:                 6000;
-@graph-label-clicked-z:         6500;
-@graph-label-hover-z:           7000;
-@histogram-z:                  10000;
-@inspector-z:                  10000;
-@inspector-tabs-z:             10001;
-@inspector-overlay-z:          10001;
-@histogram-btn-z:              10002;
-@histogram-name-z:             10002;
-@legend-z:                     10003;
+//canvas
+@meter-z:                       2100;
+@highlighted-point-z:           2200;
+@marquee-z:                     2300;
+@legend-z:                      2400;
+
+
+//menu & labels
+@menu-z:                        3100;
+@menus-z:                       3200;
+@graph-label-z:                 3300;
+@graph-label-clicked-z:         3400;
+@graph-label-hover-z:           3500;
+
+//panels
+@histogram-z:                  40100;
+@histogram-btn-z:              40200;
+@histogram-name-z:             40300;
+@inspector-z:                  41100;
+@inspector-tabs-z:             41200;
+@inspector-overlay-z:          41300;
+
+//what is this?
 @status-bar-z:                 99999;
+
 @tooltip-z:                  1000001;
 @forker-z:                   1001000;
 @persistor-z:                1001000;
